Fixed "Thus have I heard" and notes in SA 1.157

--- a/01_agama/madhyama/MA_074.md
+++ b/01_agama/madhyama/MA_074.md
@@ -11,7 +11,7 @@ next: MA_075.html
 ## Chapter 7: King Dīrghāyu
 ### 74. Eight Thoughts
 
-1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Bharga and stayed at Mṛgadāva Park in Bhīṣaṇikā Grove of Śuśumāragiri.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Bharga and stayed at Mṛgadāva Park in Bhīṣaṇikā Grove of Śuśumāragiri.
 {: #p1}
 
 #### The Eight Thoughts of a Great Man
