--- a/01_agama/madhyama/MA_075.md
+++ b/01_agama/madhyama/MA_075.md
@@ -11,7 +11,7 @@ next: MA_076.html
 ## Chapter 7: King Dīrghāyu
 ### 75. The Pure Way to the Imperturbable
 
-1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kuru and stayed at the Kuru town of Kalmāṣadamya.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kuru and stayed at the Kuru town of Kalmāṣadamya.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Desires are impermanent, fake, and false. These falsehoods then are illusory, deceptive, and foolish. Whether it’s desires in the present life, desires in the afterlife, forms in the present life, or forms in the afterlife, they are all the domain of Māra. They are Māra’s bait. As a result of them, the mind is affected by measureless bad and unskillful things like longing, anger, and fighting, which become obstacles when the noble disciple trains.
