--- a/01_agama/samyukta/01/SA1_147.md
+++ b/01_agama/samyukta/01/SA1_147.md
@@ -15,7 +15,7 @@ next: SA1_148.html
   <th class='en'>147 (35). Three Gentlemen</th>
   <tr>
     <td class="ch" title='t99.2.8a5'>如是我聞： 一時，佛住支提、竹園精舍。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Bamboo Park Monastery in Cedi.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Bamboo Park Monastery in Cedi.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.8a5'>爾時，有三正士出家未久。 所謂尊者阿㝹律陀、尊者難提、尊者金毘羅。</td>
