--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -15,7 +15,7 @@ next: SA1_149.html
   <th class='en'>148 (36). Sixteen Who Were Liberated</th>
   <tr>
     <td class="ch" title='t99.2.8a21'>如是我聞： 一時，佛住摩偷羅國、跋提河側、傘蓋菴羅樹園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Umbrella Mango Tree Park on the bank of the Bhadra River in Mathurā.<sup id="ref2"><a href="#n2">2</a></sup></td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Umbrella Mango Tree Park on the bank of the Bhadra River in Mathurā.<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.8a22'>爾時，世尊告諸比丘：「住於自洲，住於自依；住於法洲，住於法依；不異洲不異依。</td>
