--- a/01_agama/samyukta/01/SA1_149.md
+++ b/01_agama/samyukta/01/SA1_149.md
@@ -15,7 +15,7 @@ next: SA1_150.html
   <th class='en'>149 (37). I Myself</th>
   <tr>
     <td class="ch" title='t99.2.8b15'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.8b16'>爾時，世尊告諸比丘： 「我不與世間諍，世間與我諍。 所以者何？ 比丘，若如法語者，不與世間諍。 世間智者言『有』，我亦言『有』。 云何為世間智者言『有』，我亦言『有』？</td>
