--- a/01_agama/samyukta/01/SA1_150.md
+++ b/01_agama/samyukta/01/SA1_150.md
@@ -15,7 +15,7 @@ next: SA1_151.html
   <th class='en'>150 (38). Lowly</th>
   <tr>
     <td class="ch" title='t99.2.8c8'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.8c9'>爾時，世尊告諸比丘：「世人為卑下業，種種求財活命，而得巨富，世人皆知。如世人之所知，我亦如是說。所以者何？莫令我異於世人。</td>
