--- a/01_agama/samyukta/01/SA1_151.md
+++ b/01_agama/samyukta/01/SA1_151.md
@@ -15,7 +15,7 @@ next: SA1_152.html
   <th class='en'>151 (39). Seeds</th>
   <tr>
     <td class="ch" title='t99.2.8c26'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.8c27'>爾時，世尊告諸比丘： 「有五種種子。 何等為五？ 謂根種子、莖種子、節種子、自落種子、實種子。 此五種子不斷、不壞、不腐、不中風、新熟、堅實。 有地界而無水界，彼種子不生、長、增、廣。 若彼種新熟、堅實、不斷、不壞、不中風。 有水界而無地界，彼種子亦不生、長、增、廣。 若彼種子新熟、堅實、不斷、不壞、不腐、不中風。 有地、水界，彼種子生、長、增、廣。</td>
