--- a/01_agama/samyukta/01/SA1_152.md
+++ b/01_agama/samyukta/01/SA1_152.md
@@ -15,7 +15,7 @@ next: SA1_153.html
   <th class='en'>152 (40). Stagnation</th>
   <tr>
     <td class="ch" title='t99.2.9a27'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.9a28'>爾時，世尊告諸比丘： 「封滯者不解脫，不封滯則解脫。 云何封滯不解脫？ 比丘，攀緣四取陰識住。 云何為四？ 色封滯識住⋯受⋯想⋯行封滯識住⋯</td>
