--- a/01_agama/samyukta/01/SA1_153.md
+++ b/01_agama/samyukta/01/SA1_153.md
@@ -15,7 +15,7 @@ next: SA1_154.html
   <th class='en'>153 (41). Five Turns</th>
   <tr>
     <td class="ch" title='t99.2.9b7'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.9b8'>爾時，世尊告諸比丘： 「有五受陰：色受陰⋯受⋯想⋯行⋯識受陰。 我於此五受陰五種如實知：色如實知⋯色集⋯色味⋯色患⋯色離如實知。 如是，受⋯想⋯行⋯識如實知⋯識集⋯識味⋯識患⋯識離如實知。</td>
