--- a/01_agama/samyukta/01/SA1_154.md
+++ b/01_agama/samyukta/01/SA1_154.md
@@ -15,7 +15,7 @@ next: SA1_155.html
   <th class='en'>154 (42). Seven Standpoints</th>
   <tr>
     <td class='ch' title='t99.2.10a4'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.10a5'>爾時，世尊告諸比丘： 「有七處善、三種觀義，盡於此法得漏盡，得無漏。 心解脫，慧解脫。 現法，自知、身作證具足住： 『我生已盡，梵行已立，所作已作。』 自知不受後有。</td>
