--- a/01_agama/samyukta/01/SA1_157.md
+++ b/01_agama/samyukta/01/SA1_157.md
@@ -15,7 +15,7 @@ next: SA1_158.html
   <th class='en'>157 (45). The Aggregates in the Past, Future, and Present</th>
   <tr>
     <td class='ch' title='t99.2.11b1'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.11b2'>爾時，世尊告諸比丘： 「有五受陰。 云何為五？ 色受陰⋯受⋯想⋯行⋯識受陰。 若諸沙門、婆羅門見有我者，一切皆於此五受陰見我。 諸沙門、婆羅門見色是我，色異我，我在色，色在我。 見受⋯想⋯行⋯識是我，識異我，我在識，識在我。</td>
@@ -44,9 +44,9 @@ next: SA1_158.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 45 in the <cite>Taisho</cite> edition and no. 157 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0011b01" target="_blank">T99.2.11b1-20</a>). It is very similar to <a href="https://suttacentral.net/sn22.47" target="_blank">SN 22.47</a>. A slightly different version of this <em>sūtra</em> is found at SĀ 1.60 (63).</p> [<a href="#ref1">back</a>]</li>
-<li id="n2"><p><em>six contacts of the senses</em>. C. <span class="ch">六觸入處</span>, P. <em>ṣaṭ phassa āyatana</em>, S. <em>channa sparśa āyatana</em>. This expression refers to the sensory experience that results when the sense faculties and their external objects come together. In SN 22.47, only five faculties are mentioned here, presumably because the mind faculty is mentioned separately in relation to ignorance in the next paragraph. Perhaps also because the five faculties aside from mind are physical and develop with the body. Here, all six are treated together as a group.</p> [<a href="#ref2">back</a>]</li>
-<li id="n3"><p><em>experiences</em>. C. <span class="ch">覺</span>. It seems most likely that <span class="ch">覺</span> translated a word like P. <em>vedayitena</em>, which means feelings or experience. This qualifier is not included in the list found in SN 22.47. They are instead presented as quotations of what the ordinary person thinks. We should also note that the actual items in this list differ from those found in SN 22.47, which is a list of speculations about being reborn. Here, the speculations could include ideas about rebirth, but they seem existential in general. In SĀ 1.60 (63), the item “neither existence nor non-existence” is included to form the full tetralemma.</p> [<a href="#ref3">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 45 in the <cite>Taisho</cite> edition and no. 157 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0011b01" target="_blank">T99.2.11b1-20</a>). It is very similar to <a href="https://suttacentral.net/sn22.47" target="_blank">SN 22.47</a>. A slightly different version of this <em>sūtra</em> is found at SĀ 1.60 (63). [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>six contacts of the senses</em>. C. <span class="ch">六觸入處</span>, P. <em>ṣaṭ phassa āyatana</em>, S. <em>channa sparśa āyatana</em>. This expression refers to the sensory experience that results when the sense faculties and their external objects come together. In SN 22.47, only five faculties are mentioned here, presumably because the mind faculty is mentioned separately in relation to ignorance in the next paragraph. Perhaps also because the five faculties aside from mind are physical and develop with the body. Here, all six are treated together as a group. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>experiences</em>. C. <span class="ch">覺</span>. It seems most likely that <span class="ch">覺</span> translated a word like P. <em>vedayitena</em>, which means feelings or experience. This qualifier is not included in the list found in SN 22.47. They are instead presented as quotations of what the ordinary person thinks. We should also note that the actual items in this list differ from those found in SN 22.47, which is a list of speculations about being reborn. Here, the speculations could include ideas about rebirth, but they seem existential in general. In SĀ 1.60 (63), the item “neither existence nor non-existence” is included to form the full tetralemma. [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
 
