--- a/01_agama/samyukta/01/SA1_158.md
+++ b/01_agama/samyukta/01/SA1_158.md
@@ -15,7 +15,7 @@ next: SA1_159.html
   <th class='en'>158 (46). Worldly Food</th>
   <tr>
     <td class="ch" title='t99.2.11b21'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.11b22'>爾時，世尊告諸比丘： 「有五受陰。 云何為五？ 色、受、想、行、識受陰。 若沙門、婆羅門以宿命智自識種種宿命。 已識、當識、今識，皆於此五受陰。 已識、當識、今識：『我過去所經，如是色、如是受、如是想、如是行、如是識。』</td>
