--- a/01_agama/samyukta/01/SA1_159.md
+++ b/01_agama/samyukta/01/SA1_159.md
@@ -15,7 +15,7 @@ next: SA1_160.html
   <th class='en'>159 (47). Faithful</th>
   <tr>
     <td class="ch" title='t99.2.12a9'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.12a10'>爾時，世尊告諸比丘： 「信心善男子應作是念： 『我應隨順法。 我當於色多修厭離住，於受⋯想⋯行⋯識多修厭離住。』</td>
