--- a/01_agama/samyukta/01/SA1_161.md
+++ b/01_agama/samyukta/01/SA1_161.md
@@ -15,7 +15,7 @@ next: SA1_162.html
   <th class='en'>161 (49). Ānanda</th>
   <tr>
     <td class="ch" title='t99.2.12a27'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.12a28'>爾時，世尊告尊者阿難曰： 「若信心長者、長者子來問汝言： 『於何等法知其生、滅？』 汝當云何答乎？」</td>
