--- a/01_agama/samyukta/01/SA1_47.md
+++ b/01_agama/samyukta/01/SA1_47.md
@@ -18,11 +18,11 @@ next: SA1_48.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c5'>[13]爾時，有異比丘於禪中思惟，作是念：「頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？」</td>
+    <td class="ch" title='t125.2.67c5'>爾時，有異比丘於禪中思惟，作是念：「頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？」</td>
     <td id='p2'>2. It was then that a certain monk had this thought while contemplating in meditation, “Isn’t there a form that remains permanent, eternal, unchanging, and the same?<sup id="ref2"><a href="#n2">2</a></sup> … feeling … conception … volition … awareness that remains permanent, eternal, unchanging, and the same?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c7'>是比丘晡時從禪起，往詣佛所，頭面禮足，却住一面，白佛言：「世尊！我於禪中思惟，作是念：『頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？』今[14]日世尊，頗有色常、恒、不變易、正住耶？頗有受、想、行、識，常、恒、不變易、正住耶？」</td>
+    <td class="ch" title='t125.2.67c7'>是比丘晡時從禪起，往詣佛所，頭面禮足，却住一面，白佛言：「世尊！我於禪中思惟，作是念：『頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？』今日世尊，頗有色常、恒、不變易、正住耶？頗有受、想、行、識，常、恒、不變易、正住耶？」</td>
     <td id='p3'>3. This monk rose from his meditation in the afternoon and went to the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand to one side. He then said to the Buddha, “Bhagavān, I was contemplating in meditation and had this thought, ‘Isn’t there a form that remains permanent, eternal, unchanging, and the same? … feeling … conception … volition … awareness that remains permanent, eternal, unchanging, and the same?’ Now, I ask the Bhagavān, ‘Isn’t there a form that remains permanent, eternal, unchanging, and the same? … feeling … conception … volition … awareness that remains permanent, eternal, unchanging, and the same?’”</td>
   </tr>
   <tr>
@@ -38,7 +38,7 @@ next: SA1_48.html
     <td id='p5'>5. “Monk, I can’t find even this small amount of earth [that remains always the same]. If I could find it, then something would remain permanent, eternal, unchanging, and the same.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c16'>佛告比丘：「我自憶宿命，長夜修福，得諸勝妙可愛果報之事。曾於七年中，修習慈心，經七劫成壞，不還此世。七劫壞時生光音天，七劫成時還生梵世，空宮殿中作大梵王，無勝、無上，領千世界。從是[15]已後，復三十六反，作天帝釋。</td>
+    <td class="ch" title='t125.2.67c16'>佛告比丘：「我自憶宿命，長夜修福，得諸勝妙可愛果報之事。曾於七年中，修習慈心，經七劫成壞，不還此世。七劫壞時生光音天，七劫成時還生梵世，空宮殿中作大梵王，無勝、無上，領千世界。從是已後，復三十六反，作天帝釋。</td>
     <td id='p6'>6. The Buddha told the monk, “I myself recall a past life during which I cultivated merits for a long night and attained greater, sublime, and delightful rewards. I once cultivated kind thoughts for seven years. For seven eons of formation and destruction, I didn’t return to this world. During those seven eons of destruction, I was born in the Ābhāsvara Heaven. During those seven eons of formation, I was reborn in the Brahma world. I became the Great King Brahmā in an empty palace, who was the unequalled and unsurpassed ruler of a thousand worlds. After that, I was born as Lord Śakra thirty-six times.</td>
   </tr>
   <tr>
@@ -50,15 +50,15 @@ next: SA1_48.html
     <td id='p8'>8. “It’s the way of anointed kings that they have 84,000 <em>nāga</em> elephants decorated with many jeweled ornaments. They’re covered with jeweled netting and carry jeweled banners. Their leader is an elephant king named Upavasatha.<sup id="ref5"><a href="#n5">5</a></sup> They would gather in front of the palace twice a day, in the morning and afternoon. At the time, I thought, ‘This great herd of elephants comes here twice a day, trampling innumerable living things to death. I would rather have 42,000 elephants come once per century instead.’ Then, they did as I wished. 42,000 of those 84,000 elephants would come once a century.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a3'>「灌頂王法復有八萬四千匹馬，亦[1]以純金為諸乘具，金網覆上，[2]婆羅馬王為其導首。</td>
+    <td class="ch" title='t125.2.68a3'>「灌頂王法復有八萬四千匹馬，亦以純金為諸乘具，金網覆上，婆羅馬王為其導首。</td>
     <td id='p9'>9. “Another rule of anointed kings is that they have 84,000 horse teams with chariots made of pure gold and covered with gold netting. Their leader is the horse king named Vālaha.<sup id="ref6"><a href="#n6">6</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a5'>「灌頂王法有八萬四千四種寶車，所謂金車、銀車、琉璃車、頗梨車，師子、虎、豹皮、雜色欽婆羅以為覆[3]襯，䟦求毗闍耶難提音聲之車為其導首。</td>
+    <td class="ch" title='t125.2.68a5'>「灌頂王法有八萬四千四種寶車，所謂金車、銀車、琉璃車、頗梨車，師子、虎、豹皮、雜色欽婆羅以為覆襯，䟦求毗闍耶難提音聲之車為其導首。</td>
     <td id='p10'>10. “Another rule of anointed kings is that they have 84,000 chariots made of four treasures: gold chariots, silver chariots, beryl chariots, and crystal chariots. They were covered with cushions of lion, tiger, and leopard skin as well as variegated wool fabric.<sup id="ref7"><a href="#n7">7</a></sup> Their leader was the chariot called Vaijayantaghoṣa.<sup id="ref8"><a href="#n8">8</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a8'>「灌頂王法領八萬四千城，安隱豐樂，人民熾盛，[4]拘舍婆提城而為上首。</td>
+    <td class="ch" title='t125.2.68a8'>「灌頂王法領八萬四千城，安隱豐樂，人民熾盛，拘舍婆提城而為上首。</td>
     <td id='p11'>11. “Another rule of anointed kings is that they govern 84,000 cities, which are secure, bountiful, pleasant, and have flourishing populations. Their leader is the city Kuśavatī.<sup id="ref9"><a href="#n9">9</a></sup></td>
   </tr>
   <tr>
@@ -78,7 +78,7 @@ next: SA1_48.html
     <td id='p15'>15. “Furthermore, monk, another rule of anointed kings is that they have 84,000 beautiful women who are warrior women or resemble warrior women, to say nothing of other women.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a18'>「復次，比丘！灌頂王法有八萬四千[10]飲食，眾味具足。比丘！八萬四千玉女中，唯以一人以為給侍；八萬四千寶衣，唯著一衣；八萬四千寶床，唯臥一床；八萬四千宮殿，唯處一殿；八萬四千城，唯居一城，名拘舍婆提；八萬四千寶車，唯乘一車，名[11]毘闍耶難提瞿沙，出城遊觀；八萬四千寶馬，唯乘一馬，名婆羅訶，毛尾紺色；八萬四千龍象，唯乘一象，名[12]布薩陀，出城遊觀。</td>
+    <td class="ch" title='t125.2.68a18'>「復次，比丘！灌頂王法有八萬四千飲食，眾味具足。比丘！八萬四千玉女中，唯以一人以為給侍；八萬四千寶衣，唯著一衣；八萬四千寶床，唯臥一床；八萬四千宮殿，唯處一殿；八萬四千城，唯居一城，名拘舍婆提；八萬四千寶車，唯乘一車，名毘闍耶難提瞿沙，出城遊觀；八萬四千寶馬，唯乘一馬，名婆羅訶，毛尾紺色；八萬四千龍象，唯乘一象，名布薩陀，出城遊觀。</td>
     <td id='p16'>16. “Furthermore, monk, another rule of anointed kings is that they have 84,000 meals replete with many flavors. Monk, among the 84,000 beautiful women, there’s only one of them who attends to the king. Of his 84,000 treasure clothes, there’s only one that he wears. Of the 84,000 treasure beds, there’s only one that he lies on. Of the 84,000 palaces, there’s only one hall where he presides. Of the 84,000 cities, there’s only one where he lives, which is called Kuśavatī. Of the 84,000 treasure chariots, there’s only one that he rides when he leaves the city to go touring, which is called Vaijayantaghoṣa. Of the 84,000 treasure horses, there’s only one horse that he rides, which is named Vālaha and has a crimson-colored mane and tail. Of the 84,000 <em>nāga</em> elephants, there’s only one elephant that he rides when he leaves the city to go touring, which is named Upavasatha.</td>
   </tr>
   <tr>
@@ -98,7 +98,7 @@ next: SA1_48.html
     <td id='p19'>19. “If something is impermanent, is that painful?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b6'>比丘白佛[13]言：「是苦。世尊！」</td>
+    <td class="ch" title='t125.2.68b6'>比丘白佛言：「是苦。世尊！」</td>
     <td>The monk said to the Buddha, “It’s painful, Bhagavān.”</td>
   </tr>
   <tr>
@@ -146,7 +146,7 @@ next: SA1_48.html
     <td id='p26'>26. That monk celebrated and rejoiced after hearing what the Buddha taught. He then bowed and departed. Continuously mindful of that instruction based on the simile of the clod of dirt, he went alone to a quiet place, diligently contemplated it, and lived earnestly. Having lived earnestly, [he thought,] “A good son leaves home, cuts off his hair and beard, [puts on the Dharma robes,] believes at home in being homeless, and leaves home to train on the path. That’s the way he reaches the ultimate and unsurpassed religious life. He’ll himself realize in the present life: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b27'>時，彼尊者亦自知法，[14]心得解脫，成阿羅漢。</td>
+    <td class="ch" title='t125.2.68b27'>時，彼尊者亦自知法，心得解脫，成阿羅漢。</td>
     <td id='p27'>27. That venerable one also knew the Dharma himself. His mind was liberated, and he became an <em>arhat</em>.</td>
   </tr>
 </table>
@@ -155,28 +155,28 @@ next: SA1_48.html
 
 <h3 id="notes">Notes</h3>
 
-<ol>
-<li id="n1">This is <em>sūtra</em> no. 264 in the <cite>Taisho</cite> edition and no. 47 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0067c04" target="_blank">T99.2.67c4-8b28</a>). It’s parallel to <a href="https://suttacentral.net/sn22.96" target="_blank">SN 22.96</a> and <a href="https://suttacentral.net/ma61" target="_blank">MĀ 61</a>. The latter is interesting in that it represents a different version from another Savāstivāda canon, where it was placed in the <em>Madhyama Āgama</em>.<br/>
-The main difference between the SN 22.96 and these parallels is that it lacks the passage in which the Buddha lists several different forms of rebirth in the heavens as a result of cultivating merit. It also lacks the conclusion that depicts the monk following the teaching and becoming an <em>arhat</em>. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>remains permanent, eternal, unchanging, and the same.</em> C. 常、恒、不變易、正住, P. <em>nicca dhuva sassata avipariṇāmadhamma sassatisama tatheva ṭhassati</em>. The meaning of 正住 is the main difficulty in this passage. Without looking at the P. parallel, it would seem to mean “correct abode,” reading 正 as modifying 住 and the pair forming another descriptor of the aggregates. However, when we consult the parallel passage in SN 22.96, we find that <em>ṭhassati</em> (“will remain”) corresponds to 住 as the verb of the sentence, and 正 corresponds to <em>sassatisama</em> (“always the same”). The confusion is caused by the translator retaining the Indic SOV grammar in C., which uses a SVO grammar.<br/>
-Beyond this, it would seem that two things have happened in these two texts. In the P. parallel, <em>sassati</em> has been added to <em>sama</em> to create a clearer meaning, which was a common practice in Buddhist texts. In the C. translation, G. <em>sama</em> (“same, equal”) has been confused for G. <em>saṃma</em> (“correct, proper”), which sometimes happened because <em>saṃma</em> was routinely abbrev. to <em>sama</em> in G.<br/>
-As a result of this, I’ve amended 正 to 等 but otherwise maintained the C. reading with the understanding that 住 is the main verb of the clause. [<a href="#ref2">back</a>]</li>
-<li id="n3"><em>small clod of dirt.</em> C. 小土摶, P. <em>paritta gomayapiṇḍa</em>. The expressions are the same in the other two parallels other than one has “earth” and the other “cowdung.” 摶 often translated the equiv. of P. <em>piṇḍa</em>, which occurs more commonly to describe a bite of food. In MĀ 61, the expression has been made even more dramatic: “scooped a little cowdung with his fingernail” (指爪抄少牛糞). [<a href="#ref3">back</a>]</li>
-<li id="n4">This description of different kinds of rebirth are not found in SN 22.96. MĀ 61 omits this section describing noble wheel-turning king rebirths, but it does include the rebirths in heaven. Instead of a section on wheel-turning king rebirths, MĀ 61 has the Buddha being reborn “measureless times” as “warrior head-born kings” (S. <em>kṣatriya mūrdhajāta</em>). This was apparently a variation of the expression we find in P. and here in SĀ that lit. means “head-consecrated” king (<em>muddhāvasitta</em>, C. 灌頂王, S. <em>mūrdhābhiṣikta</em>). This “head consecration” seems to have referred to an ascension ritual that involved sprinkling water on the new king’s head.<br/>
-Here in SĀ, this passage about being reborn as noble wheel-turning kings is curious. Was the wheel-turning king considered the same as the anointed king that’s described below, or were they different types of kings? The confusion between the three parallels suggests that the wheel-turning king wasn’t mentioned here at all in the common ancestor text. [<a href="#ref4">back</a>]</li>
-<li id="n5"><em>Upavasatha.</em> C. 布薩 (EMC. po-sat), G. <em>posatha</em>, P. <em>uposatha</em>, S. <em>upavasatha</em>. The C. appears to translit. the G. equiv. of P. <em>uposatha</em> (dropping the final syllable as usu.). This was the name for Buddhist days of fasting and observing precepts. The elephant king is named the same in the P. parallel. The name found in MĀ 61 is unclear. [<a href="#ref5">back</a>]</li>
-<li id="n6"><em>Vālaha.</em> C. 婆羅 (EMC. bua-la), G. <em>vala</em>, P. <em>valāhaka</em>, S. <em>vālaha</em>?. The C. likely translit. G. <em>vala</em>, but it’s not clear what the intended meaning would be. The P. parallel has adopted the reading <em>valāhaka</em>, which means a storm cloud. The alt. C. parallel in MĀ 61 translates the name as 䭷 (“horse with a long mane”). However, a passage below makes it clearer that the reading is actually S. <em>vālaha</em> (C. 婆羅訶) like the P. parallel. This S. word refers to an animal’s tail and would agree more with MĀ 61’s translation. [<a href="#ref6">back</a>]</li>
-<li id="n7"><em>wool fabric.</em> C.欽婆羅 (EMC. k‘ɪəm-bua-la), G. ?, P. <em>kambala</em>, S. <em>kambala</em>. The C. appears to translit. a word equiv. to P./S. <em>kambala</em>, meaning fabric made of wool. [<a href="#ref7">back</a>]</li>
-<li id="n8"><em>Vaijayantaghoṣa.</em> C. 毗闍耶難提音聲 (EMC. bii-ʒɪă-yiă-nan-dei + “voice”), P. <em>vejayanta</em>, S. vaijayantaghoṣa. MĀ 61 translates this name as 樂聲 (“delightful voice”). 毗闍耶難提 appears to translit. an expression like S. <em>vaijayanta</em>, which is the name of Śakra’s palace and means “Triumph” or “Banner.” 音聲 likely translates <em>ghoṣa</em>, as indicated in the translit. that occurs below. There also appears to be a prefix 䟦求 that’s unclear. As a translit., it might represent Pr. <em>vagu</em> or <em>bagu</em>. It isn’t included in the translit. below, so I’ve set it aside as perhaps a corruption of the C. text. [<a href="#ref8">back</a>]</li>
-<li id="n9"><em>Kuśavatī</em>. C. 拘舍婆提 (EMC. kɪu-ʃɪă-bua-dei), G. <em>kuśavadi</em>, P. <em>kusāvatī</em>, S. <em>*kuśavatī</em>. The C. translit. matches the G. pronunciation best. [<a href="#ref9">back</a>]</li>
-<li id="n10"><em>Yoha</em>. C. 由訶 (EMC. yiəu-ha), P. <em>dhamma</em>. It’s unclear what this name means. The C. translit. is likely a Pr. pronunciation that may be equiv. to S. <em>yojana</em>, but this doesn’t seem very meaningful as a reading. I’ve reproduced the C. translit. in this case given that I’m not certain of its true S. equiv. [<a href="#ref10">back</a>]</li>
-<li id="n11"><em>antelope</em>. C. 迦陵伽 (EMC. kă-lɪəŋ-gɪă), G. <em>karaṅga</em>, P. <em>kadalimiga</em>, S. <em>kuraṅga</em>. The P. parallel reading is a kind of antelope deer hide. The C. translit. is well-known for <em>kaliṅga</em>, the name of a country in ancient India. However, it could also sound out a word like S. <em>kuraṅga</em>, which was the name of an Indian antelope. This makes better sense in the present context and in light of the P. parallel. [<a href="#ref11">back</a>]</li>
-<li id="n12"><em>silk cloth, linen cloth, </em>dukūla<em> cloth, and </em>kukova<em>? cloth</em>. C. 迦尸細衣 (EMC. kă-ʃɪi-sei)、芻摩衣 (EMC. ṭṣ‘ïu-mua)、頭鳩羅衣 (EMC. dəu-kɪəu-la)、拘沾(沽)婆衣 (EMC. kɪu-t‘em(ko)-bua), P. khomasukhumāni koseyyasukhumāni kambalasukhumāni kappāsikasukhumāni.<br/>
-The first C. translit. name doesn’t exactly match the well known S. <em>kauśeya</em> for a kind of silk, but I’ve guessed the C. might be corrupt or the original word some obscure Pr. pronunciation for the same.<br/>
-The second item most likely translit. G. <em>*kṣoma</em>, which is equiv. to P. <em>khoma</em> and S. <em>kṣauma</em>. This was a type of linen cloth.<br/>
-The third translit. is P/S. <em>dukūla</em>, which was another kind of fine linen made from bark fiber. It was apparently comparable to silk and often confused with true silk.<br/>
-The last item, which I’ve guessed was a translit. of something like Pr. <em>kukova</em>, is obscure to me. The <em>Taisho</em>’s 拘沾婆 might be a corruption of 拘沽婆 (or <em>vice versa</em>). 拘沽婆 has an entry in a Chinese glossary (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1051b15" target="_blank">T2130.54.1051b15</a>), which claims that it was the name of a country. If so, it’s not a country I’ve been able to identify.<br/>
-MĀ 61 lists five types of cloth: linen (<em>kṣoma</em>), silk, silk (<em>dukūla</em>?), cotton, and antelope skin (~ S. <em>kuraṅga-pravara</em>?) (初摩衣、錦衣、繒衣、劫貝衣、加陵伽波惒邏衣)[<a href="#ref12">back</a>]</li>
+<ol class="notes-list">
+<li id="n1"><p>This is <em>sūtra</em> no. 264 in the <cite>Taisho</cite> edition and no. 47 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0067c04" target="_blank">T99.2.67c4-8b28</a>). It’s parallel to <a href="https://suttacentral.net/sn22.96" target="_blank">SN 22.96</a> and <a href="https://suttacentral.net/ma61" target="_blank">MĀ 61</a>. The latter is interesting in that it represents a different version from another Savāstivāda canon, where it was placed in the <em>Madhyama Āgama</em>.</p>
+<p>The main difference between the SN 22.96 and these parallels is that it lacks the passage in which the Buddha lists several different forms of rebirth in the heavens as a result of cultivating merit. It also lacks the conclusion that depicts the monk following the teaching and becoming an <em>arhat</em>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>remains permanent, eternal, unchanging, and the same.</em> C. 常、恒、不變易、正住, P. <em>nicca dhuva sassata avipariṇāmadhamma sassatisama tatheva ṭhassati</em>. The meaning of 正住 is the main difficulty in this passage. Without looking at the P. parallel, it would seem to mean “correct abode,” reading 正 as modifying 住 and the pair forming another descriptor of the aggregates. However, when we consult the parallel passage in SN 22.96, we find that <em>ṭhassati</em> (“will remain”) corresponds to 住 as the verb of the sentence, and 正 corresponds to <em>sassatisama</em> (“always the same”). The confusion is caused by the translator retaining the Indic SOV grammar in C., which uses a SVO grammar.</p>
+<p>Beyond this, it would seem that two things have happened in these two texts. In the P. parallel, <em>sassati</em> has been added to <em>sama</em> to create a clearer meaning, which was a common practice in Buddhist texts. In the C. translation, G. <em>sama</em> (“same, equal”) has been confused for G. <em>saṃma</em> (“correct, proper”), which sometimes happened because <em>saṃma</em> was routinely abbrev. to <em>sama</em> in G.</p>
+<p>As a result of this, I’ve amended 正 to 等 but otherwise maintained the C. reading with the understanding that 住 is the main verb of the clause. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>small clod of dirt.</em> C. 小土摶, P. <em>paritta gomayapiṇḍa</em>. The expressions are the same in the other two parallels other than one has “earth” and the other “cowdung.” 摶 often translated the equiv. of P. <em>piṇḍa</em>, which occurs more commonly to describe a bite of food. In MĀ 61, the expression has been made even more dramatic: “scooped a little cowdung with his fingernail” (指爪抄少牛糞). [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p>This description of different kinds of rebirth are not found in SN 22.96. MĀ 61 omits this section describing noble wheel-turning king rebirths, but it does include the rebirths in heaven. Instead of a section on wheel-turning king rebirths, MĀ 61 has the Buddha being reborn “measureless times” as “warrior head-born kings” (S. <em>kṣatriya mūrdhajāta</em>). This was apparently a variation of the expression we find in P. and here in SĀ that lit. means “head-consecrated” king (<em>muddhāvasitta</em>, C. 灌頂王, S. <em>mūrdhābhiṣikta</em>). This “head consecration” seems to have referred to an ascension ritual that involved sprinkling water on the new king’s head.</p>
+<p>Here in SĀ, this passage about being reborn as noble wheel-turning kings is curious. Was the wheel-turning king considered the same as the anointed king that’s described below, or were they different types of kings? The confusion between the three parallels suggests that the wheel-turning king wasn’t mentioned here at all in the common ancestor text. [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p><em>Upavasatha.</em> C. 布薩 (EMC. po-sat), G. <em>posatha</em>, P. <em>uposatha</em>, S. <em>upavasatha</em>. The C. appears to translit. the G. equiv. of P. <em>uposatha</em> (dropping the final syllable as usu.). This was the name for Buddhist days of fasting and observing precepts. The elephant king is named the same in the P. parallel. The name found in MĀ 61 is unclear. [<a href="#ref5">back</a>]</p></li>
+<li id="n6"><p><em>Vālaha.</em> C. 婆羅 (EMC. bua-la), G. <em>vala</em>, P. <em>valāhaka</em>, S. <em>vālaha</em>?. The C. likely translit. G. <em>vala</em>, but it’s not clear what the intended meaning would be. The P. parallel has adopted the reading <em>valāhaka</em>, which means a storm cloud. The alt. C. parallel in MĀ 61 translates the name as 䭷 (“horse with a long mane”). However, a passage below makes it clearer that the reading is actually S. <em>vālaha</em> (C. 婆羅訶) like the P. parallel. This S. word refers to an animal’s tail and would agree more with MĀ 61’s translation. [<a href="#ref6">back</a>]</p></li>
+<li id="n7"><p><em>wool fabric.</em> C.欽婆羅 (EMC. k‘ɪəm-bua-la), G. ?, P. <em>kambala</em>, S. <em>kambala</em>. The C. appears to translit. a word equiv. to P./S. <em>kambala</em>, meaning fabric made of wool. [<a href="#ref7">back</a>]</p></li>
+<li id="n8"><p><em>Vaijayantaghoṣa.</em> C. 毗闍耶難提音聲 (EMC. bii-ʒɪă-yiă-nan-dei + “voice”), P. <em>vejayanta</em>, S. vaijayantaghoṣa. MĀ 61 translates this name as 樂聲 (“delightful voice”). 毗闍耶難提 appears to translit. an expression like S. <em>vaijayanta</em>, which is the name of Śakra’s palace and means “Triumph” or “Banner.” 音聲 likely translates <em>ghoṣa</em>, as indicated in the translit. that occurs below. There also appears to be a prefix 䟦求 that’s unclear. As a translit., it might represent Pr. <em>vagu</em> or <em>bagu</em>. It isn’t included in the translit. below, so I’ve set it aside as perhaps a corruption of the C. text. [<a href="#ref8">back</a>]</p></li>
+<li id="n9"><p><em>Kuśavatī</em>. C. 拘舍婆提 (EMC. kɪu-ʃɪă-bua-dei), G. <em>kuśavadi</em>, P. <em>kusāvatī</em>, S. <em>*kuśavatī</em>. The C. translit. matches the G. pronunciation best. [<a href="#ref9">back</a>]</p></li>
+<li id="n10"><p><em>Yoha</em>. C. 由訶 (EMC. yiəu-ha), P. <em>dhamma</em>. It’s unclear what this name means. The C. translit. is likely a Pr. pronunciation that may be equiv. to S. <em>yojana</em>, but this doesn’t seem very meaningful as a reading. I’ve reproduced the C. translit. in this case given that I’m not certain of its true S. equiv. [<a href="#ref10">back</a>]</p></li>
+<li id="n11"><p><em>antelope</em>. C. 迦陵伽 (EMC. kă-lɪəŋ-gɪă), G. <em>karaṅga</em>, P. <em>kadalimiga</em>, S. <em>kuraṅga</em>. The P. parallel reading is a kind of antelope deer hide. The C. translit. is well-known for <em>kaliṅga</em>, the name of a country in ancient India. However, it could also sound out a word like S. <em>kuraṅga</em>, which was the name of an Indian antelope. This makes better sense in the present context and in light of the P. parallel. [<a href="#ref11">back</a>]</p></li>
+<li id="n12"><p><em>silk cloth, linen cloth, </em>dukūla<em> cloth, and </em>kukova<em>? cloth</em>. C. 迦尸細衣 (EMC. kă-ʃɪi-sei)、芻摩衣 (EMC. ṭṣ‘ïu-mua)、頭鳩羅衣 (EMC. dəu-kɪəu-la)、拘沾(沽)婆衣 (EMC. kɪu-t‘em(ko)-bua), P. khomasukhumāni koseyyasukhumāni kambalasukhumāni kappāsikasukhumāni.</p>
+<p>The first C. translit. name doesn’t exactly match the well known S. <em>kauśeya</em> for a kind of silk, but I’ve guessed the C. might be corrupt or the original word some obscure Pr. pronunciation for the same.</p>
+<p>The second item most likely translit. G. <em>*kṣoma</em>, which is equiv. to P. <em>khoma</em> and S. <em>kṣauma</em>. This was a type of linen cloth.</p>
+<p>The third translit. is P/S. <em>dukūla</em>, which was another kind of fine linen made from bark fiber. It was apparently comparable to silk and often confused with true silk.</p>
+<p>The last item, which I’ve guessed was a translit. of something like Pr. <em>kukova</em>, is obscure to me. The <em>Taisho</em>’s 拘沾婆 might be a corruption of 拘沽婆 (or <em>vice versa</em>). 拘沽婆 has an entry in a Chinese glossary (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1051b15" target="_blank">T2130.54.1051b15</a>), which claims that it was the name of a country. If so, it’s not a country I’ve been able to identify.</p>
+<p>MĀ 61 lists five types of cloth: linen (<em>kṣoma</em>), silk, silk (<em>dukūla</em>?), cotton, and antelope skin (~ S. <em>kuraṅga-pravara</em>?) (初摩衣、錦衣、繒衣、劫貝衣、加陵伽波惒邏衣). [<a href="#ref12">back</a>]</p></li>
 </ol>
 <hr/>
 
