--- a/01_agama/samyukta/13/SA13_12.md
+++ b/01_agama/samyukta/13/SA13_12.md
@@ -11,7 +11,7 @@ next: SA13_13.html
 ## [13. Factors of the Noble Path](index.html)
 ### 12 (759). Feeling
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “There are three feelings that are impermanent, conditioned, and dependently arisen. What are the three? They are pleasant feeling, painful feeling, and feeling that’s neither pleasant nor painful.”
