--- a/01_agama/samyukta/13/SA13_15.md
+++ b/01_agama/samyukta/13/SA13_15.md
@@ -11,7 +11,7 @@ next: SA13_16.html
 ## [13. Factors of the Noble Path](index.html)
 ### 15 (761). Correct Men and Great Men
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I will explain the correct man and the great man.[\[2\]](#n2){:#ref2} Listen closely and consider it well. What is a correct man? It means a correct man’s accomplishment of right view … right intention … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called a correct man. What is the great man? It means the great man’s accomplishment of right view … right intention … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called a great man.”
