--- a/01_agama/samyukta/13/SA13_16.md
+++ b/01_agama/samyukta/13/SA13_16.md
@@ -11,7 +11,7 @@ next: SA13_17.html
 ## [13. Factors of the Noble Path](index.html)
 ### 16 (762). The Noble End of Contaminants
 
-1\. Thus have I heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I will explain the noble end of contaminants. What is the noble end of contaminants? It means the adept’s accomplishment of right view … the adept’s accomplishment of right samādhi. This is called the noble end of contaminants.”
