--- a/01_agama/samyukta/13/SA13_20-21.md
+++ b/01_agama/samyukta/13/SA13_20-21.md
@@ -10,7 +10,7 @@ next: SA13_22.html
 ## [13. Factors of the Noble Path](index.html)
 ### 20-21 (766). The Arising of the Noble Path
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Suppose a monk’s right view is pure, cleansed, without fault, and free of afflictions. This never happens except when he’s disciplined by a buddha (12.20) <em>or</em> a sugata (12.21) … [right samādhi is pure, cleansed, without fault, and free of afflictions. This never happens except when he’s disciplined by a Buddha.]
