--- a/01_agama/samyukta/13/SA13_22.md
+++ b/01_agama/samyukta/13/SA13_22.md
@@ -11,7 +11,7 @@ next: SA13_23.html
 ## [13. Factors of the Noble Path](index.html)
 ### 22 (767). Wholesome and Unwholesome Aggregates
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “The expression ‘bad aggregate’ means the five hindrances. This is the correct explanation. What is the reason for that? It’s an entirely unwholesome aggregate that’s called the five hindrances. What are the five? They are the hindrance of greed … anger … drowsiness … restlessness, and the hindrance of doubt.
