--- a/01_agama/samyukta/13/SA13_24.md
+++ b/01_agama/samyukta/13/SA13_24.md
@@ -11,7 +11,7 @@ next: SA13_25.html
 ## [13. Factors of the Noble Path](index.html)
 ### 24 (769). The Brahmin’s Chariot
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. In the early morning, Venerable Ānanda put on his robe, took his bowl, and went to Śrāvastī to solicit alms. The priest Jātiśroṇa[\[2\]](#n2){:#ref2} was riding a chariot with white horses, and a crowd of many youths was following him. The horses, chariot, bridle, and whip were white. He wore a white hat, his parasol was white, and he held a white whisk in hand. He wore white clothes, his jewelry was white, white powder was smeared on his body, and his followers were all in white. They were leaving Śrāvastī intending to go to a grove for instruction and recitation. When the crowds saw them, they all said, “Excellent vehicle, excellent vehicle! That’s called the Brahma vehicle!”
