--- a/01_agama/samyukta/13/SA13_26.md
+++ b/01_agama/samyukta/13/SA13_26.md
@@ -11,7 +11,7 @@ next: SA13_27.html
 ## [13. Factors of the Noble Path](index.html)
 ### 26 (771). The Other Shore
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. The priest Jātiśroṇa then came to visit the Buddha and exchanged polite greetings and inquiries with the Bhagavān. Afterward, he withdrew to sit at one side. He said, “Gautama, there is what’s not the other shore and what is the other shore. Gautama, what’s not the other shore, and what is the other shore?”
