--- a/01_agama/samyukta/13/SA13_28.md
+++ b/01_agama/samyukta/13/SA13_28.md
@@ -11,7 +11,7 @@ next: SA13_29.html
 ## [13. Factors of the Noble Path](index.html)
 ### 28 (773). The Other Shore (3)
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. Venerable Ānanda then came to visit the Buddha, prostrated at his feet, and withdrew to sit at one side. He said, “Bhagavān, there is what’s not the other shore and what is the other shore. Bhagavān, what’s not the other shore, and what is the other shore?”
