--- a/01_agama/samyukta/13/SA13_29.md
+++ b/01_agama/samyukta/13/SA13_29.md
@@ -11,7 +11,7 @@ next: SA13_30.html
 ## [13. Factors of the Noble Path](index.html)
 ### 29 (774). The Other Shore (4)
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Buddha addressed the monks, “There is what’s not the other shore and what is the other shore. What’s not the other shore, and what is the other shore? Wrong view is not the other shore, but right view is the other shore. Wrong intention … wrong speech … wrong action … wrong livelihood … wrong method … wrong mindfulness … wrong <em>samādhi</em> is not the other shore, but right intention … right speech … right action … right livelihood … right method … right mindfulness … right <em>samādhi</em> is the other shore.”
