--- a/01_agama/samyukta/13/SA13_30.md
+++ b/01_agama/samyukta/13/SA13_30.md
@@ -11,7 +11,7 @@ next: SA13_74.html
 ## [13. Factors of the Noble Path](index.html)
 ### 30 (775). What’s Rightly Considered
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Among inner things, I don’t see a single one that can cause the arising of evil and bad things that have yet to arise or the redoubling of those that have already arisen and make them grow like not rightly considering [them]. Monks, not rightly considering it causes wrong view to occur that’s yet to occur and to redouble it when it has already occurred. <em>Wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong </em>samādhi<em> are likewise explained.</em>
