--- a/01_agama/samyukta/13/SA13_75.md
+++ b/01_agama/samyukta/13/SA13_75.md
@@ -11,7 +11,7 @@ next: ../14/index.html
 ## [13. Factors of the Noble Path](index.html)
 ### 75 (785). The Eightfold Path (2)
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
 2\. It was then that the Bhagavān addressed the monks … <em>like [SĀ 13.74](SA13_74.html){: target="_blank"} with this difference:</em> “What’s right view? There are two kinds of right view: Right view that’s worldly, conventional, contaminated, acquired, and which leads to a good destiny, and right view that’s noble, transcendent, uncontaminated, unacquired, and which correctly ends suffering and leads to the limit of suffering.
