--- a/01_agama/samyukta2/SA2_180.md
+++ b/01_agama/samyukta2/SA2_180.md
@@ -10,7 +10,7 @@ next: index.html
 # The Alternate Related Discourses
 ### 180. Crossing the Flood
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. There was a god whose radiance was double the usual amount that came during the night to visit the Buddha. Its impressive light completely illuminated Jeta’s Grove bright as daylight. He withdrew to sit at one side and asked the Buddha, “Gautama, were you able to cross the flood?”
