--- a/01_agama/samyukta2/SA2_46.md
+++ b/01_agama/samyukta2/SA2_46.md
@@ -10,7 +10,7 @@ next: SA2_180.html
 # The Alternate Related Discourses
 ### 46. The Eighth Day
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Buddha addressed the monks, “On the eighth day of the month, the four god kings send an official to assess the world. They examine the world’s people: ‘Are they kind and pious to their parents, respectful to their elders, serve ascetics and priests, and cultivate good things? Or, do they practice what’s bad and therefore ought to cultivate good things, eliminate the many evils, restrict their senses, and guard the precepts?’
