--- a/09_other_sutras/T780.md
+++ b/09_other_sutras/T780.md
@@ -10,7 +10,7 @@ next:
 # Alternate Agama Sutras
 ### T780: The Ten Powers
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “You should know that Buddhas, Tathāgatas, Arhats, and Completely Awakened Ones perfect ten powers. They’re called Tathāgatas, Arhats, and Completely Awakened Ones because they perfected these ten powers. Being supreme, extraordinary, mighty, and sovereign, they turn the unsurpassed and pure Brahma wheel and correctly roar the lion’s roar amid a great assembly.
