--- a/09_other_sutras/T781.md
+++ b/09_other_sutras/T781.md
@@ -10,7 +10,7 @@ next:
 # Alternate Agama Sutras
 ### T781: The Ten Powers
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by an assembly of monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by an assembly of monks.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “You should know that the Tathāgata, Arhat, and Completely Awakened One has ten kinds of power. Being endowed with these powers, he comprehends a vast and supreme standpoint. Amid a great assembly, he roars the lion’s roar and turns the sublime Brahma wheel.
