--- a/09_other_sutras/T802.md
+++ b/09_other_sutras/T802.md
@@ -10,7 +10,7 @@ next:
 # Alternate Agama Sutras
 ### T802: Confidence in the Knowledge Powers
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by an assembly of great monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by an assembly of great monks.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Monks, you should know possession of the power of confidence. This teaching realizes the true principle and the Tathāgata’s fearlessness that can only be known by a Buddha.
