--- a/01_agama/madhyama/MA_072.md
+++ b/01_agama/madhyama/MA_072.md
@@ -11,7 +11,7 @@ next: MA_073.html
 ## Chapter 7: King Dīrghāyu
 ### 72. The Legend of King Dīrghāyu
 
-1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila Park.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila Park.
 {: #p1}
 
 2\. At the time, the Kauśāmbī monks were having numerous quarrels with each other. The Bhagavān told the Kauśāmbī monks, “Monks, don’t quarrel with each other. Why is that?
