--- a/01_agama/madhyama/MA_073.md
+++ b/01_agama/madhyama/MA_073.md
@@ -11,7 +11,7 @@ next: MA_074.html
 ## Chapter 7: King Dīrghāyu
 ### 73. The Gods
 
-1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Cedi and stayed at Waterside Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Cedi and stayed at Waterside Grove.
 {: #p1}
 
 #### 1. Purifying Knowledge and Vision
