--- a/01_agama/madhyama/MA_081.md
+++ b/01_agama/madhyama/MA_081.md
@@ -11,7 +11,7 @@ next: MA_082.html
 ## Chapter 7: King Dīrghāyu
 ### 81. Mindfulness of Body
 
-1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Aṅga with a group of great monks. They went to Āpaṇa and stayed at Kaineya’s residence.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Aṅga with a group of great monks. They went to Āpaṇa and stayed at Kaineya’s residence.
 {: #p1}
 
 #### Introduction
