--- a/01_agama/samyukta/01/SA1_156.md
+++ b/01_agama/samyukta/01/SA1_156.md
@@ -15,7 +15,7 @@ next: SA1_157.html
   <th class='en'>156 (44). The Bound and Awakened (2)</th>
   <tr>
     <td class='ch' title='t99.2.11a13'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.11a14'>爾時，世尊告諸比丘： 「若生則繫著。 不生則不繫著。 諦聽，善思！ 當為汝說。</td>
