--- a/01_agama/samyukta/01/SA1_160.md
+++ b/01_agama/samyukta/01/SA1_160.md
@@ -15,7 +15,7 @@ next: SA1_161.html
   <th class='en'>160 (48). Faithful (2)</th>
   <tr>
     <td class="ch" title='t99.2.12a18'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.12a19'>爾時，世尊告諸比丘： 「信心善男子正信非家、出家，自念： 『我應隨順法。 於色當多修厭住，於受⋯想⋯行⋯識多修厭住。』</td>
