--- a/01_agama/samyukta/01/SA1_172.md
+++ b/01_agama/samyukta/01/SA1_172.md
@@ -15,7 +15,7 @@ next: SA1_178.html
   <th class='en'>1.172 (104). Yamaka</th>
   <tr>
     <td class="ch" title='t99.2.30c12'>如是我聞： 一時，佛住舍衞國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
 <tr>
   <td class="ch" title='t99.2.30c13'></td>
