--- a/01_agama/samyukta/13/SA13_14-15.md
+++ b/01_agama/samyukta/13/SA13_14-15.md
@@ -11,7 +11,7 @@ next: SA13_16.html
 ## [13. Factors of the Noble Path](index.html)
 ### 14-15 (761). Trainees and Adepts
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “I will explain the trainee and the adept (13.14) <em>or</em> the correct man and the great man[\[2\]](#n2){:#ref2} (13.15). Listen closely and consider it well. What is a trainee <em>or</em> correct man? It means their accomplishment of right view … right intention … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called a trainee <em>or</em> correct man. What is an adept <em>or</em> great man? It means their accomplishment of right view … right intention … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called an adept <em>or</em> great man.”
