--- a/01_agama/samyukta/13/SA13_19.md
+++ b/01_agama/samyukta/13/SA13_19.md
@@ -11,7 +11,7 @@ next: SA13_20-21.html
 ## [13. Factors of the Noble Path](index.html)
 ### 19 (765). Past and Future Cultivation
 
-1\. Thus have I heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Now, I will explain a monk’s past cultivation of the noble eightfold path and future cultivation of the noble eightfold path. [Listen closely and consider it well.]”
