--- a/01_agama/samyukta/13/SA13_21.md
+++ b/01_agama/samyukta/13/SA13_21.md
@@ -11,7 +11,7 @@ next: SA13_22.html
 ## [13. Factors of the Noble Path](index.html)
 ### 21 (766). Arising of the Noble Path (2)
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Suppose a monk’s right view is pure, cleansed, without fault, and free of afflictions. When this had yet to happen, it didn’t happen except by the discipline of the Sugata … <em>likewise up to right samādhi</em>. Suppose his right view is pure, cleansed, without fault, and free of afflictions. When this had yet to happen, it could happen … <em>likewise up to right samādhi</em>.”
