--- a/01_agama/samyukta/19/SA19_15.md
+++ b/01_agama/samyukta/19/SA19_15.md
@@ -11,7 +11,7 @@ next: ../25/index.html
 ## [19. Indra](index.html)
 ### 15 (1117). The Fasting Days
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “On the eighth day of the month, the four god kings order a great minister to assess the world: ‘Are there people who support their parents, ascetics, priests, and relatives? Do they honor them, make merits, see the evils of the present world, and fear their consequences in the afterlife? Do they practice generosity to make merit and observe the fasting rules? On the eight, fourteenth, and fifteenth days of the month and miracle months, do they accept the precepts at the poṣadha?’
