--- a/01_agama/samyukta/25/SA25_57.md
+++ b/01_agama/samyukta/25/SA25_57.md
@@ -11,7 +11,7 @@ next: ../26/index.html
 ## [25. Gods](index.html)
 ### 57 (1267). Crossing the Flood
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that a god with a marvelous appearance visited the Buddha late at night. That god bowed at the Buddha’s feet and withdrew to sit to one side. The radiance of its body completely illuminated Anāthapiṇḍada’s Park and Jeta’s Grove.
